--- a/examples/viewers_quadview/viewers_quadview.html
+++ b/examples/viewers_quadview/viewers_quadview.html
@@ -1,10 +1,8 @@
 <div id="my-gui-container"></div>
+  
+<div id="r0" class="renderer"></div>
+<div id="r1" class="renderer"></div>
+<div id="r2" class="renderer"></div>
+<div id="r3" class="renderer"></div>
 
-<div class="visualizer">
-    <div id="r0" class="renderer"></div>
-    <div id="r1" class="renderer"></div>
-    <div id="r2" class="renderer"></div>
-    <div id="r3" class="renderer"></div>
-</div>
-
-<script type="text/javascript" src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/STLLoader.js"></script>
+<div style="background-color: #f9f9f9; width: 0; height: 0;"></div>
